# Proyecto_Integrador_Equipo_11

./: .gitignore  README.md  pyproject.toml
data/preprocessed/: X_test.parquet  X_train.parquet  X_val.parquet  y_test.parquet  y_train.parquet
data/raw_binary/: y_test.parquet  y_train.parquet  y_val.parquet
docs/: Notas_Generales.md
notebooks/: AlternativeModels.ipynb  AlternativeModels.py  BaselineModel.ipynb  DataPreparation.ipynb  Digraph.gv  ExploratoryDataAnalysis.ipynb  ExploratoryDataAnalysisV2.ipynb  FeatureEngineering.ipynb  FeatureEngineering.py  FinalModel.ipynb  best_model_anxiety.pth  best_model_depression.pth  best_model_stress.pth  utils.py  watermarking.ipynb
notebooks/emotional_state_recognition/: Comp5.ipynb  LLE5.ipynb  PCA5.ipynb  Stress Modeling and Testing H20 3 classes.ipynb  feature_engineering_explanation.md  feature_engineering_portion_code.py
notebooks/old/: FeatureEngineeringOld.ipynb
notebooks/reports/: Reporte_BaselineModel.ipynb
scripts/: ExploratoryDataAnalysis.py
src/: feature_engineering.py  transformers.py  utils.py  xgboost_analysis.ipynb
watermarking_analysis/: anxiety_data.csv  depression_data.csv  stress_data.csv  training.ipynb
