[tool.poetry]
name = "proyecto-integrador-equipo-11"
version = "0.1.0"
description = ""
authors = [
    "Moises Diaz <moisesdiazmalagon@gmail.com>",
    "Armando Bringas <armando.bringas@gmail.com>",
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
xlrd = ">=2.0.1"
pyarrow = "^19.0.0"
fastparquet = "^2024.11.0"
jupyter = "^1.1.1"
pywavelets = "^1.8.0"
statsmodels = "^0.14.4"
plotly = "^5.24.1"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
